--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mundo Dev</title>
+    <link rel="stylesheet" href="/css/estilo.css">
 </head>
 <body>
-    
+    <header>Mundo Dev</header>
+<section>
+    <nav>
+        <ul class="listas">
+            <li>
+                <a href=""><button>Video Aulas</button></a>
+            </li>
+            <li>
+                <a href=""><button>E-Books</button></a>
+            </li>
+            <li>
+                <a href=""><button>Ferramentas</button></a>
+            </li>
+            <li>
+                <a href=""><button>Quem somos</button></a>
+            </li>
+            </ul>
+    </nav>
+</section>
 </body>
 </html>
