--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <nav>
         <ul class="listas">
             <li>
-                <a href=""><button>Video Aulas</button></a>
+                <a href=""><button role="button">Video Aulas</button></a>
             </li>
             <li>
-                <a href=""><button>E-Books</button></a>
+                <a href=""><button role="button">E-Books</button></a>
             </li>
             <li>
-                <a href=""><button>Ferramentas</button></a>
+                <a href=""><button role="button">Ferramentas</button></a>
             </li>
             <li>
-                <a href=""><button>Quem somos</button></a>
+                <a href=""><button role="button">Quem somos</button></a>
             </li>
             </ul>
     </nav>
