terminado duas paginas
aqui esta duas paginas simples, mas podemos mudalas ate o final do curso

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
         <ul class="listas">
             <li>
-                <a href=""><button role="button">Video Aulas</button></a>
+                <a href="pages/page2.html"><button role="button">Video Aulas</button></a>
             </li>
             <li>
                 <a href=""><button role="button">E-Books</button></a>
