Mudando as ordens para mostrar no page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ nav{
     -webkit-flex: 1;
     -ms-flex: 1;
     flex: 1;
-    background-image: url("/img/pexels-pixabay-262508.jpg");
+    background-image: url("/pexels-pixabay-262508.jpg");
     padding: 0px;
 }
 .listas{
