--- a/index.html
+++ b/index.html
@@ -58,27 +58,32 @@ button:active {
     background-color: blanchedalmond;
     transform: translate(4px);
 }
+.container{
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.397);
+}
     </style>
 </head>
 <body>
-    <header>Mundo Dev</header>
-<section>
-    <nav>
-        <ul class="listas">
-            <li>
-                <a href="pages/page2.html"><button role="button">Video Aulas</button></a>
-            </li>
-            <li>
-                <a href=""><button role="button">E-Books</button></a>
-            </li>
-            <li>
-                <a href=""><button role="button">Ferramentas</button></a>
-            </li>
-            <li>
-                <a href=""><button role="button">Quem somos</button></a>
-            </li>
-            </ul>
-    </nav>
-</section>
+    <div class="container">
+        <header>Mundo Dev</header>
+        <section>
+            <nav>
+                <ul class="listas">
+                    <li>
+                        <a href="pages/page2.html"><button role="button">Video Aulas</button></a>
+                    </li>
+                    <li>
+                        <a href=""><button role="button">E-Books</button></a>
+                    </li>
+                    <li>
+                        <a href=""><button role="button">Ferramentas</button></a>
+                    </li>
+                    <li>
+                        <a href=""><button role="button">Quem somos</button></a>
+                    </li>
+                    </ul>
+            </nav>
+        </section>
+    </div>
 </body>
 </html>
