--- a/index.html
+++ b/index.html
@@ -5,85 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mundo Dev</title>
-    <!--<link rel="stylesheet" href="/css/estilo.css">-->
-    <style>
-        *{
-    box-sizing: border-box;
-}
-body{
-    font-family: Arial, Helvetica, sans-serif;
-}
-header{
-    background-color: rgb(12, 11, 11);
-    padding: 20px;
-    text-align: center;
-    font-size: 35px;
-    color: blanchedalmond;
-}
-section{
-    display: -webkit-flex;
-    display: flex;
-}
-nav{
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    background-image: url("/pexels-pixabay-262508.jpg");
-    padding: 0px;
-}
-.listas{
-    list-style-type: none;
-    padding: 5px;
-}
-button{
-    display: inline-block;
-    padding: 15px 25px;
-    font-size: 24px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    outline: none;
-    color: rgb(31, 30, 30);
-    background-color: rgb(184, 190, 184);
-    border: none;
-    border-radius: 15px;
-    margin: 5px;
-}
-button:hover {
-    background-color: rgba(0, 0, 0, 0.541);
-    color: antiquewhite;
-}
-button:active {
-    background-color: blanchedalmond;
-    transform: translate(4px);
-}
-.container{
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.397);
-}
-    </style>
+    <link rel="stylesheet" href="/css/estilo.css">
 </head>
 <body>
-    <div class="container">
-        <header>Mundo Dev</header>
-        <section>
-            <nav>
-                <ul class="listas">
-                    <li>
-                        <a href="pages/page2.html"><button role="button">Video Aulas</button></a>
-                    </li>
-                    <li>
-                        <a href=""><button role="button">E-Books</button></a>
-                    </li>
-                    <li>
-                        <a href=""><button role="button">Ferramentas</button></a>
-                    </li>
-                    <li>
-                        <a href=""><button role="button">Quem somos</button></a>
-                    </li>
-                    </ul>
-            </nav>
-        </section>
-    </div>
+    <header>Mundo Dev</header>
+<section>
+    <nav>
+        <ul class="listas">
+            <li>
+                <a href="pages/page2.html"><button role="button">Video Aulas</button></a>
+            </li>
+            <li>
+                <a href=""><button role="button">E-Books</button></a>
+            </li>
+            <li>
+                <a href=""><button role="button">Ferramentas</button></a>
+            </li>
+            <li>
+                <a href="q-somo-page3.html"><button role="button">Quem Somos</button></a>
+            </li>
+            </ul>
+    </nav>
+</section>
 </body>
 </html>
