--- a/pages/page2.html
+++ b/pages/page2.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/page2.css">
+    <link rel="stylesheet" href="../css/page2.css">
     <title>Video Aulas</title>
 </head>
 <body>
     <header>
         <h1>Lista de Cursos</h1>
     </header>
-    <div>
-        <ul class="lista-ul">
-            <a href="https://youtube.com/playlist?list=PLHz_AreHm4dkZ9-atkcmcBaMZdmLHft8n"><h3>HTML5</h3></a>
-            <a href="https://www.youtube.com/watch?v=FRhM6sMOTfg&list=PLwXQLZ3FdTVGf7GUtiOFLc_9AXO25iIzG"><h3>CSS3</h3></a>
-            <a href="https://www.youtube.com/watch?v=1-w1RfGIov4&list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1"><h3>JAVASCRIPT</h3></a>
-        </ul>
-    </div>
+    <section>
+        <div>
+            <ul class="lista-ul">
+                <a href="https://youtube.com/playlist?list=PLHz_AreHm4dkZ9-atkcmcBaMZdmLHft8n" target="_blank" rel="external"><h3>HTML5</h3></a>
+                <a href="https://www.youtube.com/watch?v=FRhM6sMOTfg&list=PLwXQLZ3FdTVGf7GUtiOFLc_9AXO25iIzG"  target="_blank" rel="external"><h3>CSS3</h3></a>
+                <a href="https://www.youtube.com/watch?v=1-w1RfGIov4&list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1"  target="_blank" rel="external"><h3>JAVASCRIPT</h3></a>
+            </ul>
+        </div>
+    </section>
+    <section class="navigation">
+        <a href="../index.html" class="voltar" target="_self">Voltar</a>
+    </section>
 </body>
 </html>
