--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
             <img src="img/logo.png" alt="logo mundo dev">
         </div>
         <div class="navegador-header">
-            <a href="pages/page2.html" class="link-header" >Curso</a>
+            <a href="pages/page2.html" class="link-header" >Cursos</a>
             <a href="">E-books</a>
             <a href="q-somo-page3.html" target="next">Sobre</a>
             <a href="">Seja um Apoiador</a>
             <a href="">login</a>
-            <a href="">Cadastre-se</a>
         </div>
     </header>
     <main>
