--- a/q-somo-page3.html
+++ b/q-somo-page3.html
@@ -8,26 +8,24 @@
 </head>
 <body>
     <h2>Missão:</h2> 
-            Este site tem o objetivo de reunir material didático gratuito já disponível na internet com o fins de poupar tempo e direcionar os calouros do curso de Desenvolvimento de sistemas.
+           <p> Este site tem o objetivo de reunir material didático gratuito já disponível na internet com a finalidade de poupar seu tempo e direcionar os calouros do curso de Desenvolvimento de sistemas.</p>
     <h2>Visão:</h2>
-           nossos esforços para o futuro é implementa outros cursos, queremos ser referente em unir conteúdo didático gratuito já disponível na internet para a comunidades.
+           <p>Nossos esforços para o futuro é implementa outros cursos, queremos ser referência em unir conteúdo didático gratuito já disponível na internet para a comunidade.</p>
     <h2>Valor:</h2>
-            queremos contribuir com a comunidade, atraz de conhecimento organizado e de qualidade, afim que o aluno ou outro qualquer consiga o máximo de conteúdo possível ao alcance de um click; todo o material deste portal é usado apenas para uso acadêmico sem fins lucrativo.
+            <p>Queremos contribuir com a comunidade, atraz de conhecimento organizado e de qualidade, afim que qual quer pessoa consiga o máximo de conteúdo possível a um click; todo o material deste portal é usado apenas para uso acadêmico sem fins lucrativo.</p>
     <ul type="square">
-    <h4>ESCOLA TÉCNICA ESTADUAL GOVERNADOR EDUARDO CAMPOS:
-        <p>
-            Av. Dr. Pedro Augusto Correia Araújo, s/n - Centro, São Lourenço da Mata - PE, 54735-110
-        </p>
-    </h4>
-            <b>Curso Desenvolvimento de Sistemas.</b>
-    <h4>Alunos responsáveis:</h4>
-    <li>Tiago A.S</li>
-    <li>Jeconias B.F.</li>
-    <li>Rosiene S.F.</li>
-    <li>Grazielly M.L.</li>
-    <h4>Professores Orientadores:</h4>
-    <li>Jorge M.J.</li>
-    <li>Josivaldo.</li>
- </ul>
+        <h4>ESCOLA TÉCNICA ESTADUAL GOVERNADOR EDUARDO CAMPOS:
+            <p>
+                Av. Dr. Pedro Augusto Correia Araújo, s/n - Centro, São Lourenço da Mata - PE, 54735-110
+            </p>
+        </h4>
+                <b>Curso Desenvolvimento de Sistemas.</b>
+        <h4>Alunos responsáveis:</h4>
+        <li>Tiago A.S</li>
+        <li>Jeconias B.F.</li>
+        <h4>Professores Orientadores:</h4>
+        <li>Jorge M.J.</li>
+        <li>Josivaldo.</li>
+    </ul>
 </body>
 </html>
