--- a/login/login.html
+++ b/login/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +8,21 @@
     <title>Login</title>
 </head>
 <body>
-    <div>
-        <h1>Login</h1>
-        <input type="text" placeholder="nome" required>
-        <br><br>
-        <input type="password" placeholder="senha" required>
-        <br><br>
-        <button>Enviar</button>
-    </div>
+    <form action="" method="post">
+        <div>
+            <h1>Conecte-se</h1>
+            <input type="text" placeholder="nome" required>
+            <br><br>
+            <input type="password" placeholder="senha" required>
+            <br><br>
+            <button>Conectar</button>
+            <br><br>
+            <span>
+                <a href="cadastro.html">registrar-se</a>
+                <a href="../index.html">inicio</a>
+            </span>
+        </div>
+    </form>
+    
 </body>
 </html>
