--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button class="conteudo-botao"><a href="login/cadastro.html">Cadastre-se</a></button>
         </div>
     </main>
-    <footer class="final">
+    <!--<footer class="final">
         <div class="logo-final">
             <img src="img/logo.png" alt="mundo dev">
         </div>
@@ -37,6 +37,6 @@
             <a href="">mentores</a>
             <a href="">fale conosco</a>
         </div>
-    </footer>
+    </footer>-->
 </body>
 </html>
