--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <a href="">E-books</a>
             <a href="q-somo-page3.html" target="next">Sobre</a>
             <a href="">Seja um Apoiador</a>
-            <a href="login/login.html">login</a>
+            <a href="login/login.html">Login</a>
         </div>
     </header>
     <main>
         <div class="conteudo">
             <h1>Mundo Dev a um Click</h1>
             <h2>Trabalhar em equipe é unir várias formas de pensar para um só objetivo.</h2>
-            <button class="conteudo-botao"><a href="login/cadastro.html">Cadastre-se</a></button>
+            <button class="conteudo-botao"><a href="login/cadastro.html">Inscreva-se</a></button>
         </div>
     </main>
     <!--<footer class="final">
