--- a/login/login.html
+++ b/login/login.html
@@ -10,7 +10,7 @@
 <body>
     <form action="" method="post">
         <div>
-            <h1>Conecte-se</h1>
+            <h1>Login</h1>
             <input type="text" placeholder="nome" required>
             <br><br>
             <input type="password" placeholder="senha" required>
@@ -18,8 +18,8 @@
             <button>Conectar</button>
             <br><br>
             <span>
-                <a href="cadastro.html">registrar-se</a>
-                <a href="../index.html">inicio</a>
+                <a href="cadastro.html">Inscreva-se</a>
+                <a href="../index.html">Home</a>
             </span>
         </div>
     </form>
