--- a/login/cadastro.html
+++ b/login/cadastro.html
@@ -23,7 +23,7 @@
 
             <br><br>
             <span>
-                <a href="login.html">login</a>
+                <a href="login.html">Login</a>
                 <a href="../index.html">Home</a>
             </span>
             <h3 id="p"></h3>
