--- a/login/cadastro.html
+++ b/login/cadastro.html
@@ -8,7 +8,7 @@
     <title>inscreva-se</title>
 </head>
 <body>
-    <form action="" method="get">
+    <form action="#" method="get">
         <div class="container">
             <h3>Inscreva-se</h3>
             <input type="text" name="nome" id="name" placeholder="Seu nome" required>
